# ProgrammingGame

./: .gitignore  Callbacks.cpp  Callbacks.h  Game.cpp  Game.h  GraphicalTextArea.cpp  GraphicalTextArea.h  LoadOBJ.cpp  Main.cpp  ProgrammingGame.sln  ProgrammingGame.vcxproj  README.md  ShaderProgram.cpp  TextArea.cpp  TextArea.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  adfdmsadojkfn
Code/: End.tscn  GameManager.gd  GameManager.tscn  Robot.gd  TileMap.gd  box.gd  box.tscn  character.tscn  commands.txt  commands.txt.bak  control.gdshader  controls.tscn  default.tres  default.tres.bak  guard_white_spritesheet.png.import  icon.svg.import  main.tscn  menu_theme.tres  monogram.ttf.import  project.godot  robot_atlas.png.import  style_box_texture_panel.tres  tile_1.tres  tile_2.tres  wall.tres
Code/art/: character_base_16x16.png.import  guard_white_spritesheet.png.import  robot_atlas.png.import
Code/characters/: player_robot.gd  player_robot.tscn
Code/interaction/: InteractionManager.gd  InteractionManager.tscn
Code/levels/: Node.gd  level_0.tscn  level_1.tscn  (+4 more)
interpreter/: CMakeLists.txt  CodeInterpreter.cpp  CodeInterpreter.h  SCsub  grammar.cfg  main.cpp  register_types.cpp  register_types.h
interpreter/internal/: Intepreter.cpp  Interpreter.h
interpreter/src/: Ast.cpp  Ast.h  GlobalScope.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.cpp  Token.h
interpreter/test/: CMakeLists.txt  InterpreterTests.cpp
interpreter/tests/: test_interpreter.h
shaders/: 2d_frag.glsl  2d_vec.glsl  f_post.glsl  g_2d.glsl  v_post.glsl
(+79 files in other folders)
